components/Layout/Header/styles.less
@import (reference) '../../../styles/variables.less';
@import (reference) '../../../styles/fonts.less';

@element-padding: 13px 16px;

header.header {
  @medium-grey: #ddd;

  display: flex;
  flex-direction: row;

  // fix on mobile
  position: sticky;
  z-index: 101;
  top: 0;
  width: 100%;
  height: @header-height-mini;
  transition: @default-transition;
  background: @light-white;

  &.dark-mode {
    background: @blue-dark;
    .header-content ul .action-element {
      .text {
        color: @white;
      }
    }
  }

  @media @desktop {
    flex-direction: column;
    flex: 1;
    width: @side-bar-width;
    padding: 0;
    height: auto;
    transition: width 0.3s ease;
    height: 100%;
    border-right: 1px solid @medium-grey;
    position: fixed;

    &.collapsed {
      width: @side-bar-width-collapsed;
      transition: width 0.3s ease;
      .logo {
        transition: padding 0.3s ease;
        padding: 12px;
      }
      .header-content {
        ul {
          .action-element {
            .text {
              display: none;
            }
          }
        }
      }
    }
  }

  .header-start {
    display: flex;
    justify-content: space-between;
    width: 100%;
    @media @desktop {
      border-bottom: 1px solid @medium-grey;
      padding-bottom: 20px;
    }
  }

  .logo {
    padding: @default-logo-padding;
    transition: padding 0.3s ease;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .header-content {
    display: flex;
    height: @header-height-mini;
    align-items: center;
    flex-direction: row;
    overflow: scroll;

    &::-webkit-scrollbar {
      display: none;
    }
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */

    @media @desktop {
      flex-direction: column;
      overflow: auto;
      height: 100%;
    }
    ul {
      display: flex;
      flex-direction: row;
      margin: 0;
      width: 100%;
      @media @desktop {
        flex-direction: column;
      }
      .action-element {
        display: flex;
        padding: 0;
        margin-left: 20px;

        @media @desktop {
          border-bottom: 1px solid @medium-grey;
          padding: @element-padding;
          margin-left: 0;
        }
        &.active {
          .icon {
            background: @white;
            box-shadow: @box-shadow-base;
          }
        }
        .icon {
          width: 35px;
          height: 35px;
          border-radius: 8px;
          display: flex;
          align-items: center;
          justify-content: center;
          padding: 6px;
        }
        .text {
          margin-left: 12px;
          flex: 1;
          transition: all 0.2s ease-in-out;
          color: @text-color;
          font-size: @font-size-sm;
        }
      }
    }
  }

  .header-bottom {
    margin-bottom: 0;
    margin-top: auto;
    padding: 0;
    border-top: 1px solid @medium-grey;
    width: 100%;
    display: none;
    .font-medium();

    .ant-btn {
      margin-left: 4px;
      color: @text-color;
      font-size: @font-size-sm;
      .anticon {
        margin-right: 8px;
        display: flex;
        color: @black;
      }
    }

    @media @desktop {
      padding: @element-padding;
      display: block;
    }
  }
}

